# SecundaApi

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  LICENSE  README.md  alembic.ini  docker-compose.yaml  openapi.yaml  pyproject.toml
.conf/nginx/: nginx-setup.conf
.conf/postgres/: postgresql.conf
.github/workflows/: ci.yml
scripts/: seed_demo.sql
src/api/: __main__.py  app.py  settings.py
src/api/database/: db.py
src/api/database/queries/: agency.py  building.py  geo.py
src/api/database/schema/: actiivty.py  agency.py  base.py  building.py
src/api/dependencies/: auth.py  db.py
src/api/migration/: env.py
src/api/migration/versions/: 2026_01_29_2206-f3a454b9a11e_crate_tables.py
src/api/models/: actiivty.py  agency.py  building.py  geo.py
src/api/routes/: actiivty.py  agency.py  building.py
tests/: __init__.py  conftest.py  test_init.py
tests/app/database/queries/: conftest.py
tests/app/database/queries/agency/: test_get_agency_by_id.py  test_list_agencies_by_activity.py  test_list_agencies_by_building.py  test_list_agencies_by_geo.py  test_list_agencies_by_name.py
tests/app/database/queries/building/: test_list_buildings_by_geo.py
tests/app/database/queries/geo/: test_apply_geo_filter.py
tests/app/routes/actiivty/: test_activity.py
tests/app/routes/agency/: test_agency.py  test_agency_geo.py  test_agency_get.py  test_agency_list.py
tests/app/routes/building/: test_building.py  test_building_geo.py
