[project]
name = "secundaapi"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "alembic[tz]==1.18.2",
    "asyncpg==0.31.0",
    "fastapi[all]==0.128.0",
    "hypercorn[h3]==0.18.0",
    "logging518==1.0.0",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "python-jose[cryptography]==3.5.0",
    "sqlalchemy-utils==0.42.1",
    "sqlalchemy[asyncio]==2.0.46",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["api*"]
namespaces = true

[tool.setuptools.package-data]
api = ["alembic.ini"]

[dependency-groups]
dev = [
    "mypy==1.19.1",
    "ruff==0.14.14",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-mock==3.15.1",
]

[tool.ruff]
target-version = "py314"
line-length = 79

[tool.ruff.lint]
extend-select = [
    "I",
    "YTT",
    "ASYNC",
    "T20",
    "S",
    "B",
    "LOG",
    "PT",
    "C4",
    "PGH",
    "RUF",
    "W",
    "E",
    "UP",
    "N",
    "C90",
]
fixable = ["ALL"]
unfixable = []
extend-ignore = [
    "F401",
    "F841",
    "RUF003",
    "RUF002",
    "RUF006",
    "RUF001"
]

[tool.ruff.lint.extend-per-file-ignores]
"src/tests/**.py" = ["S101"]

[tool.ruff.lint.mccabe]
max-complexity = 7

[tool.mypy]
files = ["src", "tests"]
mypy_path = "src"
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin"
]
strict = true
ignore_missing_imports = true
explicit_package_bases = true
exclude = ["venv", "scripts", "tmp", "src/api/migration/"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.logging]
version = 1
disable_existing_loggers = false

[tool.logging.formatters.simple]
format = "%(levelname)s | %(asctime)-20s | %(threadName)s | %(name)s | %(message)s"

[tool.logging.handlers.console]
formatter = "simple"
stream = "ext://sys.stdout"
class = "logging.StreamHandler"

[tool.logging.root]
level = "DEBUG"
handlers = ["console"]
